Fix video stretching in feedgrid

--- a/app/assets/stylesheets/display.css.scss
+++ b/app/assets/stylesheets/display.css.scss
@@ -2098,7 +2098,8 @@ FEEDGRID
 											    =================================================================================== */
 
 												.feedgrid .type-video figure img {
-													width: 100%;
+													max-width: 100%;
+													width: auto;
 													height: auto;
 												}
 
